[package]
name = "rust_invaders"
description = "Simple, tutorial derived game of invaders."
version = "0.1.0"
authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
crossterm = "0.17.7"
rusty_audio = "1.1.4"
rusty_time = "0.11.0"
